Changed to Appointment entities

--- a/JPAAppointmentList/.settings/org.eclipse.buildship.core.prefs
+++ b/JPAAppointmentList/.settings/org.eclipse.buildship.core.prefs
@@ -2,6 +2,7 @@ arguments=
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
+connection.project.dir=../AppointmentList
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=
