--- a/AppointmentList/build.gradle
+++ b/AppointmentList/build.gradle
@@ -18,7 +18,7 @@ repositories {
 
 dependencies {
 
-	implementation project(':JPAMessageList')
+	implementation project(':JPAAppointmentList')
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
