--- a/AppointmentList/src/main/resources/application.properties
+++ b/AppointmentList/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=8084
 
 #### MYSQL DATASOURCE ####
-spring.datasource.url=jdbc:mysql://localhost:3306/postdb?useSSL=false&&useLegacyDatetimeCode=false&serverTimezone=US/Mountain
-spring.datasource.username=basic
+spring.datasource.url=jdbc:mysql://localhost:3306/appointmentdb?useSSL=false&&useLegacyDatetimeCode=false&serverTimezone=US/Mountain
+spring.datasource.username=appointment
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
