--- a/AppointmentList/src/main/resources/application.properties
+++ b/AppointmentList/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.username=appointment
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jmx.default-domain=EventTracker
